src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>TAN__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>TAN__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigns the lead to a new user. Triggers workflow that updates owner.</description>
        <inlineHelpText>Assigns the lead to a new user. Triggers workflow that updates owner.</inlineHelpText>
        <label>Assign Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Script__c</fullName>
        <description>This is where the call scripts will be uploaded</description>
        <label>Call Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_by_Pardot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the lead record was created by the Pardot to Salesforce connector. Populated by a Pardot automation rule.</description>
        <inlineHelpText>Indicates whether the lead record was created by the Pardot to Salesforce connector. Populated by a Pardot automation rule.</inlineHelpText>
        <label>Created by Pardot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Account_State__c</fullName>
        <formula>TAN__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account_Status__c</fullName>
        <formula>TEXT( TAN__r.Account_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Parse__c</fullName>
        <description>Looks to email field and parses email domain information from the email address. This is utilized in automation that looks for other contacts with the same email domain.</description>
        <formula>IF(Email&lt;&gt;NULL,SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks to email field and parses email domain information from the email address. This is utilized in automation that looks for other contacts with the same email domain.</inlineHelpText>
        <label>Email Parse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_email_marketing_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should we include this lead in email marketing campaigns?</description>
        <label>Include in pre-event email marketing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_post_event_email_marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in post-event email marketing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Long_ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead_Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Details__c</fullName>
        <description>Additional details to Lead Source field</description>
        <inlineHelpText>Additional details to Lead Source field</inlineHelpText>
        <label>Lead Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <description>Date the Lead became qualified.</description>
        <inlineHelpText>Date the Lead became qualified.</inlineHelpText>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead is a Marketing Qualified Lead by acquiring 75+ points through various interactions with Livongo’s marketing efforts.</description>
        <inlineHelpText>Lead is a Marketing Qualified Lead by acquiring 75+ points through various interactions with Livongo’s marketing efforts.</inlineHelpText>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_Acct_Found_Via_Email_Parse_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flow populates this checkbox when a Lead is created with an email address, but does not have an account and the results of a lookup yield no results.</description>
        <inlineHelpText>Flow populates this checkbox when a Lead is created with an email address, but does not have an account and the results of a lookup yield no results.</inlineHelpText>
        <label>No Acct Found Via Email Parse Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offers_Benefits_US_Employes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers Benefits US Employes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Swaggable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swaggable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_CM_Trigger_Value__c</fullName>
        <label>TMA CM Trigger Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_Last_Sent__c</fullName>
        <description>Denotes the last time the TMA was sent.</description>
        <label>TMA Last Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Playbooks_Next_Step_Due_Date__c</fullName>
        <description>Shows the date when the next set of Playbooks tasks are due.</description>
        <label>Playbooks Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <label>Playbooks Play Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Status__c</fullName>
        <label>Playbooks Play Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <label>Playbooks Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Event_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is a white-glove lead (may include pre-show gift, etc)</inlineHelpText>
        <label>Priority Event Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Why_Convert__c</fullName>
        <label>Reason Why Convert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Product_Awareness_Timestamp__c</fullName>
        <description>Indicates the date and time in which a workflow fired to send the lead to the product awareness team. Populated by process builder automation.</description>
        <inlineHelpText>Indicates the date and time in which a workflow fired to send the lead to the product awareness team.</inlineHelpText>
        <label>Sent to Product Awareness Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_to_Product_Awareness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a workflow sent an email regarding the lead record to the product awareness team.</description>
        <inlineHelpText>Indicates whether a workflow sent an email regarding the lead record to the product awareness team.</inlineHelpText>
        <label>Sent to Product Awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jason Macaleer</fullName>
                </value>
                <value>
                    <fullName>Neal Lewis</fullName>
                </value>
                <value>
                    <fullName>Mike Reeve</fullName>
                </value>
                <value>
                    <fullName>Aaryn Pure</fullName>
                </value>
                <value>
                    <fullName>Randy Forman</fullName>
                </value>
                <value>
                    <fullName>Bill Kutsche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_not_convert__c</fullName>
        <inlineHelpText>Reason why not converting this lead or &quot;lead is dead&quot;</inlineHelpText>
        <label>Why not convert</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Just purchased competitor</fullName>
                </value>
                <value>
                    <fullName>Wrong contact</fullName>
                </value>
                <value>
                    <fullName>Asked to be removed</fullName>
                </value>
                <value>
                    <fullName>Fictitious information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_closedate__c</fullName>
        <description>The date that the Neuralytics model was last run to re-evaluate the quality of the lead, and the score updated.</description>
        <label>Playbooks Lead Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isdc_closescore__c</fullName>
        <description>A number between 1 and 100, ranking the quality of the account record in relation to all other records in the SFDC org, predicting which record is most likely to close.</description>
        <label>Playbooks Lead Close Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isdc_closescoregrade__c</fullName>
        <description>Define scoring by something other than a Close Score. Example: A, B, C, D or High, Medium, Low.</description>
        <label>Playbooks Lead Close Score Grade</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_US_based_Covered_Lives__c</fullName>
        <label># of US-based Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items</relationshipLabel>
        <relationshipName>Contact_Score_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  It should be incremented each time the Lead is dialed.</description>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Has_Moved__c</fullName>
        <description>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</description>
        <inlineHelpText>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</inlineHelpText>
        <label>Person Has Moved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Complete_Status__c</fullName>
        <defaultValue>&quot;Not Compared&quot;</defaultValue>
        <label>ZoomInfo Complete Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email Address for the Lead record.</description>
        <inlineHelpText>ZoomInfo Email Address for the Lead record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Industry__c</fullName>
        <description>The Salesforce standard Industry field is only 40 characters in length. As ZoomInfo industries are sometimes longer than this, the ZoomInfo Industry field can hold up to 255 characters.</description>
        <label>ZoomInfo Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Last_Clean_Run__c</fullName>
        <description>Date/time refers to last time ZoomInfo Clean ran for record.</description>
        <inlineHelpText>Date/time refers to last time ZoomInfo Clean ran for record.</inlineHelpText>
        <label>ZoomInfo Last Clean Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Lead record.</description>
        <inlineHelpText>ZoomInfo Phone for the Lead record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</description>
        <inlineHelpText>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</inlineHelpText>
        <label>ZoomInfo Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__Zoom_Clean_Status__c</fullName>
        <label>ZoomInfo Clean Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                    <color>#009900</color>
                    <label>Clean</label>
                </value>
                <value>
                    <fullName>In Sync</fullName>
                    <color>#78C953</color>
                    <label>In Sync</label>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                    <color>#EFAE73</color>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Not Compared</fullName>
                    <color>#AFCADF</color>
                    <default>true</default>
                    <label>Not Compared</label>
                </value>
                <value>
                    <fullName>Different</fullName>
                    <color>#F3D904</color>
                    <label>Different</label>
                </value>
                <value>
                    <fullName>Company Clean Only</fullName>
                    <color>#33CC00</color>
                    <label>Company Clean Only</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <color>#CC0000</color>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Email_Opt_Outs</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.EMAIL_OPT_OUT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Email_Opt_Outs</label>
    </listViews>
    <listViews>
        <fullName>My_Leads_Created_Last_14_Days</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>My Leads - Created Last 14 Days</label>
        <sharedTo>
            <role>Commercial_Marketing_Team</role>
            <role>Inside_Sales</role>
            <role>Sales_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads_Created_Last_30_Days</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Leads - Created Last 30 Days</label>
        <sharedTo>
            <role>Commercial_Marketing_Team</role>
            <role>Inside_Sales</role>
            <role>Sales_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads_Created_Last_7_Days</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>My Leads - Created Last 7 Days</label>
        <sharedTo>
            <role>Commercial_Marketing_Team</role>
            <role>Inside_Sales</role>
            <role>Sales_Admin</role>
        </sharedTo>
    </listViews>
</CustomObject>